# scooby

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.py
.github/workflows/: lint.yml  pythonpackage.yml  release.yml
scooby/: __init__.py  __main__.py  extras.py  knowledge.py  mysteries.py  report.py  tracker.py  versions.py
scooby/cli/: __init__.py  main.py
tests/: test_report.py  test_scooby.py
